# progarchivespy

./: .editorconfig  .gitattributes  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  defines.mk  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: deploy.yml  python-package.yml
src/progarchivespy/: __init__.py  client.py
src/progarchivespy/common/: __init__.py  definitions.py  entity.py  exceptions.py  http.py  logger.py
src/progarchivespy/models/: __init__.py  album.py  artist.py  serializable.py  top_albums.py
src/progarchivespy/parsers/: __init__.py  breadcrumb.py  data.py  top_albums.py
src/progarchivespy/parsers/top_albums/: __init__.py  parser.py
src/progarchivespy/services/: __init__.py  service.py  top_albums.py
tests/: test_client.py  test_entity.py  test_http.py  test_logger.py  test_models.py  test_parsers.py  test_services.py  test_top_albums_parsers.py
tests/data/: sample_homepage.html  top_symphonic_prog_albums.html
